<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/label_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/input_data_text_view"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/input_coord_hint_input_layout"
        app:endIconMode="clear_text"
        app:helperText="Здесь вам необходимо ввести координаты интересующей Вас местности, жалетельно ввести в формате 33.4, 34.6"
        app:layout_constraintEnd_toStartOf="@id/ok_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/coordinates"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:text="55.5, 43.4"
            android:layout_height="wrap_content"
            android:paddingEnd="32dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/ok_button"
        android:layout_width="54dp"
        android:textAlignment="center"
        android:layout_height="27dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:text="@string/text_ok"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_input" />

    <TextView
        android:id="@+id/label_response"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/response_label_text_view"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/textField" />

    <TextView
        android:text="@string/empty_list_textView"
        android:textAlignment="center"
        android:id="@+id/empty_list"
        app:layout_constraintTop_toBottomOf="@id/label_response"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_response">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/weather_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>